--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -23,3 +23,15 @@ body {
     }
 }
 
+@media (max-width: 992px) and (min-width: 768px) {
+    .card{
+       span {
+            display : none;
+        }
+        button {
+            &:after {
+                content: "ادامه";
+            }
+        }
+    }
+}
