--- a/style/css/style.css
+++ b/style/css/style.css
@@ -32,5 +32,8 @@ body {
     content: "ادامه";
   }
 }
+.box-shadow {
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
+}
 
 /*# sourceMappingURL=style.css.map */
